# Aigis-The-AI-Family-Guardian-Smart-Home-Companion

./: CMakeLists.txt  LICENSE  README.md  gen_phonemes.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Aigis_MasterNode/3D_Files/: Aigis_3D file.stl
Aigis_MasterNode/Ckt_files/: Aigis node.fzz
Aigis_MasterNode/Code_files/Otto_Arduino/: Otto_Arduino.ino
Door_Node/3D_Files/: Dore_Node _Aigis_3D file.3mf
Door_Node/Ckt_files/: Dore Node CKT DIA .fzz
Door_Node/Code_files/DoorNodeCode/: DoorNodeCode.ino
Health_Node/3D_Files/: Health Node Final Case 3D.3mf
Health_Node/CDHealth_test/: CDHealth_test.ino
Health_Node/Ckt_files/: Health Node.fzz
Health_Node/Code_files/CDHealth_Node/: CDHealth_Node.ino
Smart_Home_Node/Ckt_files/: Smart Home Node CKD Dia.fzz
Smart_Home_Node/Code_files/Smart_Home_Node_CDC_Code/: Smart_Home_Node_CDC_Code.ino
main/: CMakeLists.txt  app_fall_monitor.c  app_fall_monitor.h  dance_ui.c  dance_ui.h  door_ui.c  door_ui.h  fall_ui.c  fall_ui.h  main.c  spiffs_list_helper.c  story_ui.c  story_ui.h
main/app/: app_audio.c  app_audio.h  app_espnow.c  app_espnow.h  app_led.c  app_led.h  app_sr.c  app_sr.h  app_sr_handler.c  app_sr_handler.h  app_uart.c  app_uart.h  main_ui.c  main_ui.h
main/gui/: ui_boot_animate.c  ui_main.h  ui_main_min.c  ui_player.h  ui_player_stub.c
main/gui/image/: Falldetected.h  Main_Face.h  dancing.h  lock.h  story.h  unlock.h
